# ARM-YOLOv12-SpaceManipulator

./: CITATION.cff  README.md  dataset.yaml  pyproject.toml
bridge/: calib_depth.py  check_traj.py  export_offline.py  export_rl_actor.py  fake_sender.py  hybrid_env.py  plot_image_depth_traj.py  rl_actor.mat  station_traj.npy  station_traj_fourmods.npy  station_traj_fourmods_calib.npy  station_traj_fourmods_smooth.npy  test_yolo_video.py  test_yolo_video_fourmods.py  train_2.py  train_hybrid.py  vbc_sender.py
control/: New_RL.m  PID.m
dataset/labels/: train.cache  val.cache
dataset/labels/train/: 00000.txt  00001.txt  00002.txt  00003.txt  00004.txt  00005.txt  00006.txt  00007.txt  00008.txt  00009.txt  00010.txt  00011.txt  00012.txt  00013.txt  00014.txt  00015.txt  00016.txt  00017.txt  00018.txt  00019.txt  00020.txt  00021.txt  00022.txt  00023.txt  00024.txt  00025.txt  00026.txt  00027.txt  00028.txt  00029.txt  00030.txt  00031.txt  00032.txt  00033.txt  00034.txt  00035.txt  00036.txt  00037.txt  00038.txt  00039.txt  (+960 more)
dataset/labels/val/: 00050.txt  00051.txt  00052.txt  00053.txt  00054.txt  00055.txt  00056.txt  00057.txt  00058.txt  00059.txt  00060.txt  00061.txt  00062.txt  00063.txt  00064.txt  00065.txt  00066.txt  00067.txt  00068.txt  00069.txt  00070.txt  00071.txt  00072.txt  00073.txt  00074.txt  00075.txt  00076.txt  00077.txt  00078.txt  00079.txt  00080.txt  00081.txt  00082.txt  00083.txt  00084.txt  00085.txt  00086.txt  00087.txt  00088.txt  00089.txt  (+960 more)
runs/Comparative experimental training/: args.yaml  results.csv
runs/Experimental Results Training/: args.yaml  results.csv
ultralytics/: __init___1.py  depth_test.py  multi_test.py  train_arm.py
ultralytics/cfg/datasets/: Argoverse.yaml  DOTAv1.5_1.yaml  GlobalWheat2020.yaml  HomeObjects-3K_1.yaml  ImageNet.yaml  VOC_1.yaml  VisDrone.yaml  african-wildlife_1.yaml  brain-tumor.yaml  carparts-seg.yaml  coco128-seg.yaml  coco128_1.yaml  coco8-multispectral_1.yaml  coco8-pose_1.yaml  crack-seg_1.yaml  dota8.yaml  medical-pills.yaml  package-seg_1.yaml
ultralytics/cfg/models/11/: yolo11-cls-resnet18.yaml  yolo11_1.yaml
ultralytics/cfg/models/12/: yolo12-cls_1.yaml  yolo12-obb_1.yaml  yolo12-pose_1.yaml  yolo12-seg_1.yaml  yolo12.yaml  yolo12_1.yaml
ultralytics/cfg/models/rt-detr/: rtdetr-l.yaml  rtdetr-x.yaml
ultralytics/cfg/models/v10/: yolov10b.yaml  yolov10l_1.yaml  yolov10m.yaml  yolov10n_1.yaml  yolov10s_1.yaml
ultralytics/cfg/models/v3/: yolov3_1.yaml
ultralytics/cfg/models/v5/: yolov5.yaml
ultralytics/cfg/models/v8/: yolov8-cls-resnet50_1.yaml  yolov8-ghost-p6_1.yaml  yolov8-obb.yaml  yolov8-pose.yaml  yolov8-rtdetr_1.yaml  yolov8-seg-p6.yaml  yolov8-seg.yaml  yolov8-world_1.yaml  yolov8-worldv2_1.yaml  yolov8_1.yaml
ultralytics/cfg/models/v9/: yolov9c-seg.yaml  yolov9c.yaml  yolov9e_1.yaml
ultralytics/cfg/trackers/: botsort_1.yaml
ultralytics/data/: annotator.py  build.py  dataset.py  loaders.py  split.py  utils.py
ultralytics/data/scripts/: download_weights.sh  get_coco128.sh  get_coco_1.sh
ultralytics/engine/: model.py  predictor_1.py  results.py  trainer_1.py  validator.py
ultralytics/hub/: session.py  utils.py
ultralytics/models/fastsam/: model.py  val.py
ultralytics/models/nas/: model_1.py  predict.py
ultralytics/models/rtdetr/: predict.py
ultralytics/models/sam/: __init__.py  model_1.py  predict.py
ultralytics/models/sam/modules/: memory_attention_1.py  tiny_encoder.py  transformer_1.py  utils_1.py
ultralytics/models/utils/: ops.py
ultralytics/models/yolo/classify/: predict_1.py  val.py
ultralytics/nn/: __init___1.py  autobackend.py  text_model_1.py
ultralytics/nn/modules/: activation.py  depth.py  utils.py
ultralytics/solutions/: config_1.py  distance_calculation.py  instance_segmentation_1.py  object_blurrer.py  parking_management_1.py  queue_management_1.py  region_counter_1.py  security_alarm.py  similarity_search.py  speed_estimation.py  trackzone_1.py
ultralytics/trackers/: bot_sort_1.py  byte_tracker_1.py  track_1.py
ultralytics/trackers/utils/: gmc_1.py  matching.py
ultralytics/ultralytics/: debug_dataloader.py  depth_test_second.py  predict_multi.py  test_depth_loader.py
ultralytics/ultralytics/cfg/: __init___1.py  default.yaml
ultralytics/ultralytics/data/: augment.py  base.py  converter.py  dataset_1.py  split_dota.py
ultralytics/ultralytics/engine/: exporter_1.py  trainer.py  tuner.py  validator_1.py
ultralytics/ultralytics/hub/: __init__.py  auth_1.py
ultralytics/ultralytics/nn/: tasks.py  tasks_1.py
ultralytics/ultralytics/solutions/: ai_gym_1.py  analytics.py  heatmap.py  object_counter.py  object_cropper.py  solutions_1.py  streamlit_inference.py  vision_eye.py
ultralytics/ultralytics/trackers/: basetrack.py
ultralytics/ultralytics/utils/: __init___1.py  checks_1.py  dist_1.py  files_1.py  instance_1.py  metrics_1.py  nms.py  tal_1.py  torch_utils.py  triton.py  tuner_1.py
ultralytics/utils/: autobatch_1.py  autodevice_1.py  benchmarks_1.py  cpu_1.py  downloads.py  errors_1.py  events_1.py  git.py  logger.py  loss.py  loss_1.py  ops.py  patches_1.py  plotting.py  tqdm_1.py
ultralytics/utils/callbacks/: hub_1.py  mlflow_1.py
ultralytics/utils/export/: __init__.py
(+99 files in other folders)
